# tauri-plugin-admob-banner

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
android/: build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/tontoko/admob_banner/: AdmobBannerPlugin.kt
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: can_request_ads.toml  hide_banner.toml  privacy_options_required.toml  show_banner.toml  show_privacy_options.toml
permissions/schemas/: schema.json
src/: desktop.rs  error.rs  lib.rs  mobile.rs
