[package]
name = "tauri-plugin-admob-banner"
version = "0.1.0"
edition = "2021"
description = "A minimal Tauri 2 plugin for Android AdMob banner ads with UMP consent flow"
license = "MIT"
repository = "https://github.com/tontoko/tauri-plugin-admob-banner"
keywords = ["tauri", "admob", "banner", "android", "ump"]
links = "tauri-plugin-admob-banner"

[build-dependencies]
tauri-plugin = { version = "2.2", features = ["build"] }

[dependencies]
tauri = { version = "2" }
serde = "1"
thiserror = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
